--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "nodemon": "^1.17.3",
     "truffle": "5.5.10",
     "truffle-contract": "3.0.6"
+  },
+  "dependencies": {
+    "Web3": "1.7.3"
   }
 }
